Fix edit and delete icon alignments in drafts menu.

--- a/static/styles/drafts.css
+++ b/static/styles/drafts.css
@@ -87,6 +87,8 @@
 
         &.active {
             outline: 2px solid hsl(215, 47%, 50%);
+            /* this offset ensures no gap between the blue box and the draft in active state */
+            outline-offset: -1px;
         }
 
         .message_row {
@@ -109,7 +111,7 @@
             display: inline-block;
             position: absolute;
             top: 9px;
-            right: -80px;
+            right: -103px;
             font-size: 0.9em;
 
             @media (width < $sm_min) {
